# Zotero-Tracker-New

./: .gitignore  README.md  pyproject.toml  毕设论文撰写需提供的项目信息清单.txt  毕设论文撰写需提供的项目信息清单（已填写）.md
.github/workflows/: daily-push.yml
cache/: corpus_embed_meta.json  corpus_embed_vectors.npz
config/: base.yaml  custom.yaml
data/: feedback.sqlite
outputs/2026-04-07/11-00-19/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-07/12-55-22/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-07/12-59-24/.hydra/: hydra.yaml
outputs/2026-04-07/13-02-05/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-04-07/13-10-06/.hydra/: config.yaml  hydra.yaml
src/zotero_tracker/: __init__.py  dedupe.py  email_smtp.py  executor.py  feedback.py  feedback_server.py  keywords.py  main.py  markdown_report.py  protocol.py  quality_metrics.py  utils_glob.py  web_app.py
src/zotero_tracker/reranker/: __init__.py  api.py  base.py  cache_store.py  explain.py
src/zotero_tracker/retriever/: __init__.py  arxiv.py  base.py  biorxiv.py  biorxiv_like.py  medrxiv.py  openalex.py  placeholder.py
tests/: test_arxiv_retriever.py  test_biorxiv_medrxiv_retriever.py  test_dedupe.py  test_feedback.py  test_glob_match.py  test_keywords.py  test_markdown_report_html.py  test_openalex_retriever.py  test_quality_ranking.py  test_reranker_cache.py  test_reranker_explain.py  test_reranker_text.py
